--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="icon_delete">Иконка удаления</string>
     <string name="delete">Удалить</string>
     <string name="icon_complete">Иконка выполнения</string>
+    <string name="text">Текст</string>
+    <string name="done">Готово</string>
+    <string name="cancel">Отмена</string>
+    <string name="select_date">Выбор даты</string>
+    <string name="update">Обновить</string>
 </resources>
