--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="cancel">Отмена</string>
     <string name="select_date">Выбор даты</string>
     <string name="update">Обновить</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_theme">Выберите тему</string>
+    <string name="always_light">Всегда светлая</string>
+    <string name="always_dark">Всегда тёмная</string>
+    <string name="like_in_system">Как в системе</string>
+    <string name="icon_settings">Иконка настроек</string>
+    <string name="icon_arrow_back">Иконка стрелочки назад</string>
 </resources>
